<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="py.com.ejmb.prac.Activities.RegUsuarioActivity">

    <TextView
        android:text="@string/titulo_registrar_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTituloRegUsuario"
        android:textSize="20sp"
        android:textColor="#3f51b4"/>

    <TextView
        android:text="@string/documento_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/txtUsuDoc"
        android:textSize="15sp"
        android:layout_below="@+id/txtTituloRegUsuario"
        android:layout_alignLeft="@+id/etDocumento"
        android:layout_alignStart="@+id/etDocumento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="8"
        android:id="@+id/etDocumento"
        android:hint="@string/hint_documento_string"
        android:layout_below="@+id/txtUsuDoc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/nombre_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/txtUsuNom"
        android:layout_below="@+id/etDocumento"
        android:layout_alignLeft="@+id/etDocumento"
        android:layout_alignStart="@+id/etDocumento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/etNombre"
        android:hint="@string/hint_nombre_string"
        android:layout_below="@+id/txtUsuNom"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/apellido_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/txtUsuApe"
        android:layout_below="@+id/etNombre"
        android:layout_alignLeft="@+id/etDocumento"
        android:layout_alignStart="@+id/etDocumento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/etApellido"
        android:hint="@string/hint_apellido_string"
        android:layout_below="@+id/txtUsuApe"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:id="@+id/bRegUsu"
        android:text="@string/registrar_string"
        android:onClick="registrarUsu"/>

</RelativeLayout>
