<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="py.com.ejmb.prac.Activities.RegistroActivity">

    <TextView
        android:text="@string/registro_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textColor="#3f51b4"/>

    <Button
        android:text="@string/usuario_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/bUsuario"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="regUsuario"/>

    <Button
        android:text="@string/universidad_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/bUniversidad"
        android:layout_below="@+id/bUsuario"
        android:layout_centerHorizontal="true"
        android:onClick="regUniversidad"/>

    <Button
        android:text="@string/facultad_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/bFacultad"
        android:layout_below="@+id/bUniversidad"
        android:layout_centerHorizontal="true"
        android:onClick="regFacultad"/>

    <Button
        android:text="@string/curso_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/bCurso"
        android:layout_below="@+id/bFacultad"
        android:layout_centerHorizontal="true"
        android:onClick="regCurso"/>
</RelativeLayout>
