<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_curso_horas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="py.com.ejmb.prac.Activities.RegCursoHorasActivity">

    <TextView
        android:text="@string/temp_curso_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/tvCurso" />

    <TextView
        android:text="@string/temp_horas_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/tvHoras" />

    <Button
        android:text="@string/entrada_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tvCurso"
        android:layout_toStartOf="@+id/tvCurso"
        android:id="@+id/bEntrada"
        android:onClick="setHoraEntradaSalida"/>

    <Button
        android:text="@string/salida_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvCurso"
        android:layout_toEndOf="@+id/tvCurso"
        android:id="@+id/bSalida"
        android:onClick="setHoraEntradaSalida"/>

    <Button
        android:text="@string/historialString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tvHoras"
        android:layout_alignStart="@+id/tvHoras"
        android:layout_marginBottom="50dp"
        android:id="@+id/bHistorial" />

    <TextView
        android:text="xx:xx:xx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHoraSalida"
        android:layout_alignBaseline="@+id/tvHoraEntrada"
        android:layout_alignBottom="@+id/tvHoraEntrada"
        android:layout_alignLeft="@+id/bSalida"
        android:layout_alignStart="@+id/bSalida" />

    <TextView
        android:text="xx:xx:xx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/tvHoraEntrada"
        android:layout_below="@+id/bEntrada"
        android:layout_alignLeft="@+id/bEntrada"
        android:layout_alignStart="@+id/bEntrada" />
</RelativeLayout>
