<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar_universidad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="py.com.ejmb.prac.Activities.RegUniversidadActivity">

    <TextView
        android:text="@string/universidad_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtTituloUniversidad"
        android:textSize="20sp"
        android:textColor="#3f51b4"/>

    <TextView
        android:text="@string/universidad_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/txtUniversidad"
        android:layout_below="@+id/txtTituloUniversidad"
        android:layout_alignLeft="@+id/etDescUni"
        android:layout_alignStart="@+id/etDescUni" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/txtUniversidad"
        android:layout_centerHorizontal="true"
        android:id="@+id/etDescUni"
        android:hint="@string/hint_descripcion"
        android:inputType="text" />

    <Button
        android:text="@string/registrar_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescUni"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/bRegUni"
        android:onClick="registrarUni"/>

</RelativeLayout>
